# TensorRT_Learning

./: .gitignore  README.md
PC/2D_object_detection/: README.md
PC/2D_object_detection/yolov5/include/: config.h  cuda_utils.h  preprocess.h
PC/2D_object_detection/yolov5/src/: build.cu  preprocess.cu
PC/TensorRT_demo/: CMakeLists.txt  README.md
PC/TensorRT_demo/cmake/: FindTensorRT.cmake
PC/TensorRT_demo/src/: build.cu  mlp_veri.ipynb  runtime.cu
